# architecture-first-ide-kiro

./: README.md
.kiro/specs/architecture-first-ide/: design.md  tasks.md
analysis-engine/: Dockerfile
frontend/: README.md
infrastructure-k8s/: deployment.yaml
infrastructure-terraform/: main.tf
rust-core/: Cargo.toml
rust-core/src/: analysis.rs  graph.rs  lib.rs  parser.rs
