[package]
name = "devforge-core"
version = "0.1.0"
edition = "2021"
description = "High-performance core for DevForge architecture analysis"

[dependencies]
tree-sitter = "0.20"
petgraph = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
log = "0.4"
